CDR-2273 cleanup